--- a/styles.css
+++ b/styles.css
@@ -17,10 +17,33 @@ p{
     font-size: 16px;
 }
 
+li{
+    list-style-type: none;
+}
+
 /* NAVIGATION BAR*/
 
 nav{
     height: 100px;
     width: 100%;
-    max-width: 100px;
+    max-width: 1000px;
+    margin: 0 auto ;
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+}
+
+.nav__link--list{
+    display: flex;
+}
+
+.nav__link--anchor{
+    margin: 0 12px;
+    color: black;
+    text-decoration: none;
+    font-weight: 700;
+}
+
+.nav__link--anchor-primary{
+    background-color: blue;
 }
