--- a/styles.css
+++ b/styles.css
@@ -45,5 +45,20 @@ nav{
 }
 
 .nav__link--anchor-primary{
-    background-color: blue;
+    background-color: seagreen;
+    padding: 8px 20px;
+    border-radius: 50px;
+    color: white;
+    transition: all 300ms ease;
+}
+
+.nav__link--anchor-primary:hover{
+    background-color: lightseagreen;
+}
+
+.personal__logo{
+    font-size: 24px;
+    color: seagreen;
+    margin: 0 12px;
+    font-weight: bold;
 }
