--- a/styles.css
+++ b/styles.css
@@ -21,6 +21,14 @@ li{
     list-style-type: none;
 }
 
+.flex{
+    display: flex;
+}
+
+.flex-1{
+    flex: 1;
+}
+
 /* NAVIGATION BAR*/
 
 nav{
@@ -61,4 +69,24 @@ nav{
     color: seagreen;
     margin: 0 12px;
     font-weight: bold;
+}
+
+/* ABOUT ME */
+
+#about-me{
+    min-height: 100vh;
+    display: flex;
+    flex-direction: column;
+}
+
+.about-me__info--container{
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+}
+
+.row{
+    width: 100%;
+    max-width: 800px;
+    margin: 0 auto;
 }
