--- a/styles.css
+++ b/styles.css
@@ -12,6 +12,10 @@ h1, h2, h3, h4, h5, h6, span{
     line-height: 1.25;
 }
 
+h1{
+    font-size: 36px;
+}
+
 p{
     line-height: 1.5;
     font-size: 16px;
@@ -27,6 +31,16 @@ li{
 
 .flex-1{
     flex: 1;
+}
+
+.row{
+    width: 100%;
+    max-width: 800px;
+    margin: 0 auto;
+}
+
+.text--seagreen{
+    color: seagreen;
 }
 
 /* NAVIGATION BAR*/
@@ -83,10 +97,33 @@ nav{
     display: flex;
     flex-direction: column;
     align-items: center;
+    max-width: 600px;
+    margin: 0 auto;
+    text-align: center;
 }
 
-.row{
+.about-me__picture--mask{
+    width: 100px;
+    height: 100px;
+    border-radius: 50%;
+    overflow: hidden;
+    box-shadow: 0 8px 16px rgba(0, 0, 0, 0.16);
+    margin-bottom: 28px;
+}
+
+.about-me__picture{
     width: 100%;
-    max-width: 800px;
-    margin: 0 auto;
+/* IMPROVING MY PICTURE */
+transform: scale(1.5);
+padding-top: 8px;
+}
+
+.about-me__info--title{
+    margin-bottom: 16px;
+
+}
+
+.about-me__info--para{
+    font-size: 20px;
+    margin-bottom: 28px;
 }
