--- a/styles.css
+++ b/styles.css
@@ -93,6 +93,11 @@ nav{
     flex-direction: column;
 }
 
+.about-me__info{
+    display: flex;
+    flex-direction: column;
+}
+
 .about-me__info--container{
     display: flex;
     flex-direction: column;
@@ -133,4 +138,10 @@ padding-top: 8px;
     color: black;
     text-decoration: none;
     padding: 0 16px;
+}
+
+.about-me__img--container{
+    flex: 1;
+    display: flex;
+    align-items: center;
 }
