--- a/styles.css
+++ b/styles.css
@@ -177,7 +177,7 @@ padding-top: 8px;
     transition: all 300ms ease;
 }
 
-.language__img:hover{
+.language:hover .language__img{
     filter: brightness(80%);
     opacity: 0.86;
     transform: scale(0.9);
@@ -200,4 +200,13 @@ padding-top: 8px;
 .language__name{
     position: absolute;
     bottom: 0%;
+    transform: scale(0);
+    transition: all 300ms ease;
+    font-size: 20px;
+    opacity: 0;
+}
+
+.language:hover .language__name{
+    transform: scale(1);
+    opacity: 1;
 }
