--- a/styles.css
+++ b/styles.css
@@ -210,3 +210,32 @@ padding-top: 8px;
     transform: scale(1);
     opacity: 1;
 }
+
+/* PROJECT SECTION */
+
+.project__img{
+    width: 100%;
+}
+
+.project__wrapper{
+    display: flex;
+    box-shadow: 0 20px 80px rgba(0, 0, 0, 0.45);
+    border-radius: 20px;
+    overflow: hidden;
+    position: relative;
+}
+
+.project__wrapper:before{
+    content: "";
+    position: absolute;
+    top: 0;
+    left: 0;
+    height: 100%;
+    width: 100%;
+    background-color: #242424;
+    opacity: 0;
+}
+
+.project:hover .project__wrapper:before{
+    opacity: 0.7;
+}
