--- a/styles.css
+++ b/styles.css
@@ -249,6 +249,43 @@ padding-top: 8px;
     filter: blur(4px);
 }
 
+.projects:hover .project__description{
+    opacity: 1;
+}
+
 .project__list{
     padding-top: 40px;
+}
+
+.project__description{
+    position: absolute;
+    top: 50%;
+    left: 90px;
+    transform: translateY(-50%);
+    max-width: 550px;
+    z-index: 3;
+    opacity: 0;
+    transition: opacity 300ms ease;
+}
+
+.project__description--title{
+    font-size: 40px;
+}
+
+.project__description--para{
+    margin: 16px 0;
+}
+
+.project__description--link{
+    font-size: 20px;
+    margin-right: 16px;
+    text-decoration: none;
+}
+
+.project__description--title,
+.project__description--sub-title,
+.project__description--para,
+.project__description--link{
+    text-align: left;
+    color: #fff;
 }
