--- a/styles.css
+++ b/styles.css
@@ -21,6 +21,10 @@ p{
     font-size: 16px;
 }
 
+a{
+    text-decoration: none;
+}
+
 li{
     list-style-type: none;
 }
@@ -306,10 +310,19 @@ footer{
 }
 
 .footer__row{
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: center;
     padding: 8% 0;
 }
 
 .footer__logo--img{
     width: 70px;
     height: 70px;
+}
+
+.footer__social--link,
+.footer__copyright{
+    color: #fff;
 }
