--- a/styles.css
+++ b/styles.css
@@ -6,6 +6,10 @@
     box-sizing: border-box;
 }
 
+html{
+    scroll-behavior: smooth;
+}
+
 h1, h2, h3, h4, h5, h6, span{
     color: #242424;
     text-align: center;
@@ -309,12 +313,12 @@ footer{
     background-color: #242424;
 }
 
-.footer__logo{
-    margin-bottom: 20px;
-}
-
 .footer__social--list{
     margin-bottom: 20px;
+    width: 100%;
+    max-width: 500px;
+    display: flex;
+    justify-content: space-around;
 }
 
 .footer__row{
@@ -333,4 +337,24 @@ footer{
 .footer__social--link,
 .footer__copyright{
     color: #fff;
+}
+
+.footer__logo--popper{
+    color: white;
+    position: absolute;
+    right: 0;
+    top: 30px;
+    font-weight: 700;   
+    opacity: 0;
+    transition: all 300ms ease;
+}
+
+.footer__anchor{
+    position: relative;
+    margin-bottom: 20px;
+}
+
+.footer__anchor:hover .footer__logo--popper{
+    transform: translateX(60px);
+    opacity: 1;
 }
