--- a/styles.css
+++ b/styles.css
@@ -27,6 +27,17 @@ p{
 
 a{
     text-decoration: none;
+    position: relative;
+}
+
+.link__hover-effect:after{
+    content: "";
+    position: absolute;
+    height: 3px;
+    background-color: black;
+    width: 0;
+    bottom: -3px;
+    left: 0;
 }
 
 li{
