--- a/styles.css
+++ b/styles.css
@@ -28,6 +28,11 @@ p{
 a{
     text-decoration: none;
     position: relative;
+    transition: opacity 300ms ease;
+}
+
+a:hover{
+    opacity: 0.7;
 }
 
 .link__hover-effect:after{
@@ -183,7 +188,7 @@ padding-top: 8px;
 .about-me__info--para{
     font-size: 20px;
     margin-bottom: 28px;
-    animation: fade-up 650ms 400ms backwards;
+    animation: fade-up 650ms 600ms backwards;
 }
 
 .about-me__link{
@@ -191,7 +196,10 @@ padding-top: 8px;
     color: black;
     text-decoration: none;
     padding: 0 16px;
-    animation: fade-up 650ms 400ms backwards;
+}
+
+.about-me__links{
+    animation: fade-up 650ms 600ms backwards;
 }
 
 @keyframes fade-up{
@@ -213,6 +221,16 @@ padding-top: 8px;
 
 .about-me__img{
     width: 100%;
+    animation: fade-in 1200ms 800ms backwards;
+}
+
+@keyframes fade-in{
+    0%{
+        opacity: 0;
+    }
+    100%{
+        opacity: 1;
+    }
 }
 
 /* TEXT-STACK*/
